src/objects/keihi_siire__c.object
<CustomObject>
    <description>インターブレインズ用</description>
    <fields>
        <fullName>amount__c</fullName>
        <label>金額（税抜）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>anken__c</fullName>
        <label>案件名</label>
        <referenceTo>CustomObject11__c</referenceTo>
        <relationshipLabel>経費/仕入</relationshipLabel>
        <relationshipName>AuXF</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bumon__c</fullName>
        <label>負担部門</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>本部</fullName>
                </value>
                <value>
                    <fullName>本社</fullName>
                </value>
                <value>
                    <fullName>首都圏</fullName>
                </value>
                <value>
                    <fullName>大阪</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gaichu__c</fullName>
        <label>外注区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>登録</fullName>
                </value>
                <value>
                    <fullName>未登録</fullName>
                </value>
                <value>
                    <fullName>社内仕入れ</fullName>
                </value>
                <value>
                    <fullName>仕入れ請求</fullName>
                </value>
                <value>
                    <fullName>仮払い処理</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kamoku__c</fullName>
        <label>科目</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>販売促進費</fullName>
                </value>
                <value>
                    <fullName>外注費</fullName>
                </value>
                <value>
                    <fullName>接待交際費</fullName>
                </value>
                <value>
                    <fullName>会議費</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kibou__c</fullName>
        <label>支払希望日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>koumoku__c</fullName>
        <label>項目</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mitorokugaichu__c</fullName>
        <label>未登録外注先名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mokuteki__c</fullName>
        <label>目的</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>siharaibi__c</fullName>
        <label>支払日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>siharaisaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>支払先</label>
        <referenceTo>gaichu__c</referenceTo>
        <relationshipLabel>経費/仕入</relationshipLabel>
        <relationshipName>ZxXd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>フェーズ</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>gaichu__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>仮仕入</fullName>
                </value>
                <value>
                    <fullName>値決め</fullName>
                </value>
                <value>
                    <fullName>請求処理済</fullName>
                </value>
                <value>
                    <fullName>出金処理済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zeikomi__c</fullName>
        <label>金額（税込）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>経費/仕入</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>siharaisaki__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>経費/仕入№</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>RcT_Keihi</fullName>
        <active>true</active>
        <label>経費</label>
    </recordTypes>
    <recordTypes>
        <fullName>RcT_Shiire</fullName>
        <active>true</active>
        <label>仕入</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>